# proc-macro-workshop

./: Cargo.toml  main.rs  proc-macro.md  test.rs
bitfield/: Cargo.toml
bitfield/impl/: Cargo.toml
bitfield/impl/src/: lib.rs
bitfield/src/: lib.rs
bitfield/tests/: 13-primitive_unsigned.rs  progress.rs
builder/: Cargo.toml
builder/src/: lib.rs
debug/: Cargo.toml
debug/src/: lib.rs
mylib-macro/: Cargo.toml
mylib-macro/src/: lib.rs  push_back_iter.rs
seq/: Cargo.toml
seq/src/: lib.rs
seq/tests/: 10-paste-ident-negative.rs  11-init-array-negative.rs  progress.rs
sorted/: Cargo.toml
sorted/src/: lib.rs
