[package]
name = "proc-macro-workshop"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]
members = ["builder", "debug", "seq", "sorted", "bitfield", "mylib-macro"]

[workspace.dependencies]
trybuild = { version = "1", features = ["diff"] }
syn = { version = "2", features = ["extra-traits"]}
quote = "1"
proc-macro2 = "1"

[[bin]]
name = "workshop"
path = "main.rs"

[[test]]
name = "test"
path = "test.rs"

[dependencies]
bitfield = { path = "bitfield" }
derive_builder = { path = "builder" }
derive_debug = { path = "debug" }
seq = { path = "seq" }
sorted = { path = "sorted" }
