[package]
name = "bitfield"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { workspace = true, features = ["diff"] }

[dependencies]
bitfield-impl = { path = "impl" }

proc-macro2 = { workspace = true }
syn = { workspace = true, features = ["extra-traits"]}
quote = { workspace = true }
mylib-macro = { path = "../mylib-macro" }
