[package]
name = "derive_debug"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { workspace = true, features = ["diff"] }

[dependencies]
proc-macro2 = { workspace = true }
syn = { workspace = true, features = ["extra-traits"]}
quote = { workspace = true }
mylib-macro = { path = "../mylib-macro" }
